fixes alignment on the image

--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@
 }
 
 .title-image {
+    margin-top: 70px;
+    margin-right: 50px;
     float:right;
     padding: 30px;
 }
